Soziologie Soziale Ordnung, Macht und Herrschaft, Funktionelle Differenzierung

--- a/Soziologie/Zusammenfassung.tex
+++ b/Soziologie/Zusammenfassung.tex
@@ -8,6 +8,7 @@
 \usepackage{gensymb}
 \usepackage{float}
 \usepackage{tikz}
+\usepackage{xcolor}
 \usetikzlibrary{positioning}
 \usetikzlibrary{arrows}
 
@@ -351,7 +352,7 @@ $\rightarrow$ Gesellschaftlche Konstruktion der Wirklichkeit
     \end{itemize}
 \end{itemize}
 
-\subsection*{Vorlesung 5: Institution, Organisation, kollektives Handeln}
+\section*{Vorlesung 5: Institution, Organisation, kollektives Handeln}
 \begin{itemize}
     \item
         Handlungstheoretisch: Soziale Phänomene sind in den handelnden Akteuren zu verorten
@@ -472,5 +473,172 @@ $\rightarrow$ Gesellschaftlche Konstruktion der Wirklichkeit
                     Gegenwart: Kritik und Wandel von Organisationshirarchien
             \end{itemize}
         \end{itemize}
+\end{itemize}
+
+\newpage
+
+\section*{Vorlesung 6: Soziale Ordnung, Sozialer Wandel}
+\subsection*{Soziale Ordnung}
+\begin{itemize}
+    \item
+	Grundlegende Frage der Soziologie: Wie ist soziale Ordnung möglich?
+    \item
+	Thomas Hobbes:
+	\begin{itemize}
+	    \item
+		Soziale Ordnung als Produkt zweckrationalen utilitaristischen Handelns
+	    \item
+		Der Mensch ist von Natur aus schlecht. Drei Konfliktursachen: Konkurrenz, Mißtrauen und Ruhmsucht
+	    \item
+		Führt zu Übergriffen des Gewinnens, der Sicherheit und des Ansehens wegen $\rightarrow$ Krieg aller gegen aller
+	    \item
+		Menschen müssen sich auf Kompromiss einigen: Sie benötigen mindestens eine Person, welche den Willen aller vertritt und für Ordnung (also Frieden) sorgt $\rightarrow$ Leviathan (der Souveräne), Vertrag aller mit aller
+	\end{itemize}
+    \item
+	Niklas Luhmann:
+	\begin{itemize}
+	    \item
+		"Gesellschaft ist das umfassende Sozialsystem, das alles Soziale einschließt und in Folge dessen keine soziale Umwelt kennt"
+	    \item
+		Gesamtheit der Normen, Werte, Rollen, Institutionen, Organisationen, ...
+	    \item
+		Alle sozialen Ordnungen müssen legitimiert sein (funktioniert über Diskreditierung von Abweichungen)
+	    \item
+		Wieso Ordnungsbildung? Stabilistation der Erwartungen von Individuen an andere in sozialen Situationen (Dauerhaftigkeit in der Zeit)
+	\end{itemize}
+    \item
+	Talcott Parson: TODO
+\end{itemize}
+\subsection*{Sozialer Wandel}
+\begin{itemize}
+    \item
+	Jede Veränderung von sozialer Ordnung $\rightarrow$ Sozialer Wandel
+    \item
+	Auf Ebene von Individuen: Wandel von Lebenläufen, Habitus (Emotionalisierung von Partnerschaften oder Eltern-Kind Beziehungen, Veränderung von Normalbiografien)
+    \item
+	Auf Ebene von Kultur: Wandel von Wertordnungen, Symbolsystemen, Normen (Wandeln der Ehe, Sexualitätsnormen)
+    \item
+	Auf Ebene der Sozialstruktur: Siehe Vorlesung 7)
+    \item
+	Zivilisationstheorie, Norbert Elias:
+	\begin{itemize}
+	    \item
+		Wandel des menschenschlichen Verhaltens:
+		\begin{itemize}
+		    \item
+			Verlagerung der körperlichen Verichtungen in Intim- und Privatsphäre
+		    \item
+			Wachsende Kontrolle über die eigenen Affekte und Triebe
+		    \item
+			Entwicklung von Fremdzwand zu Selbstzwang
+		    \item
+			Zivilisierung
+		\end{itemize}
+	    \item
+		Wandel der Gesellschafts- und Ordnungsstrukturen:
+		\begin{itemize}
+		    \item
+			Ständige Angst und Unsicherheit auf Grund der dauerenden Bedrohung durch körperliche Gewalt
+		    \item
+			Entwicklung eines Staates, der physische Gewalt monopolisiert
+		    \item
+			Staatenbildung
+		\end{itemize}
+	    \item
+		Zweiterer Wandel hat ersten zur Folge
+
+	\end{itemize}
+\end{itemize}
+\section*{Vorlesung 7: Macht und Herrschaft, Funktionale Differenzierung}
+\subsection*{Macht und Herrschaft}
+\begin{itemize}
+    \item
+	Max Weber: Macht bedeutet jede Chance, innerhalb einer sozialen Beziehung den eigenen Willen auch gegen Widerstreben durchzusetzen, gleichviel, worauf diese Chance beruht	
+    \item
+	Machtquellen:
+	\begin{itemize}
+	    \item
+		Körperliche Überlegenheit
+	    \item
+		Persönlichkeit (Überzeugung, Erflüsterung, Einfluss)
+	    \item
+		Besitz/Eigentum (durch Kontrolle gesellschaftlich relevanter Ressourcen)
+	    \item
+		Organisation (durch überlegene Formen der Kooperation)
+	\end{itemize}
+    \item
+	Wirkungsmechanismen
+	\begin{itemize}
+	    \item
+		Sanktion (Fähigkeit zur Drohung mit Konsequenzen bei unerwünschtem Verhalten)
+	    \item
+		Kompensation (Fähigkeit zur Kompensation der Unterwerfung)
+	    \item
+		Manipulation (Fähigkeit zur Verschleierung der Unterwerfung)
+	\end{itemize}
+    \item
+	Gewalt
+	\begin{itemize}
+	    \item
+		Eine spezielle Form von Macht: Verletzungsmacht
+	    \item
+		Machtdemonstration gegenüber vielen durch Gewalt gegen einen
+	    \item
+		Kann soziale Machtbeziehung stabilisieren (z.B. sexuelle Macht)
+	    \item
+		Extremste Form: Tötungsmacht, absolute Macht
+	\end{itemize}
+    \item
+	Institutionalisierung von Macht (=Herrschaft) nach Popitz:
+	\begin{enumerate}
+	    \item
+		Ablödung der Macht von personalen Konstellationen hin zu Funktionen und Positionen (Entpersonalisierung)	
+	    \item
+		Ablösung der Machtausübung von Willkür und Orientierung an feststehenden Verfahrensweisen und Regeln (Formalisierung)
+	    \item
+		Integration der Macht in übergreifende Ordungsgefüge (Integration, verschmilzt mit den bestehenden Verhältnissen)
+	\end{enumerate}
+    \item
+	Stufen der Institutionalisierung nach Popitz:
+	\begin{enumerate}
+	    \item
+		Sporadische Macht
+	    \item
+		Normierende Macht (Machthaber kann gegenüber Unterworfenen regelmäßig gleichartige Verhaltensweisen fordern)
+	    \item
+		Positionale Macht (Macht an soziale Positionen gebunden)
+	    \item
+		Positionsgefüge der Macht (Herrschaftsapparat = Staffelung von Macht und Ohnmacht innerhalb der Machtpyramide)
+	\end{enumerate}
+    \item
+	Max Weber, Herrschaft: Herrschaft soll heißen die Chancen, für einen Befehl bestimmten Inhalts bei angebbaren Personen Gehorsam zu finden
+    \item
+	Legitime Herrschaft (Max Weber: 3 Typen):
+	\begin{itemize}
+	    \item
+		Tradition (Herrscher, Herr): Autorität legitimiert durch Tradition, Gehorsam wegen Glaube an der Heiligkeit der Tradition
+	    \item
+		Charisma (Führer): Autorität legitimiert durch Ausstrahlung
+	    \item
+		Legalität (Vorgesetzter, Chef): Autorität durch Amt und Fachwissen
+	\end{itemize}
+    \item
+	Herrschaftsorganisation:
+	\begin{itemize}
+	    \item
+		Legitimitätsgeltung ist nur eine Bedingung stabiler Herrschaft
+	    \item
+		Verwaltungsapparat: Ausdifferenzierung von sozialen Positionen, die mit unterschiedlichen Entscheidungsbefugnissen ausgestattet sind
+	\end{itemize}
+\end{itemize}
+
+\subsection*{Funktionale Differenzierung (Integration)}
+\begin{itemize}
+    \item
+	Die Soziologie versteht und analysiert die moderne Gesellschaft als eine funktional differenzierte. Das heißt, dass zentrale Funktionen der Gesellschaft von einzelnen Teilsystemen recht autonom und nach spezifischen Eigenlogiken erbracht werden
+    \item
+	Wichtige Funktionsbereiche: Ökonomie, Politik, Wissenschaft, Kunst, Recht, Religion
+    \item
+	Funktionale Differenzierung ermöglicht Komplexitätssteigerung (jedoch erkauftes Steuerungsdefizit, Heterarchie)
 \end{itemize}
 \end{document}
